[package]
name = "penguin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
env_logger = "0.11.3"
pingora = { version = "0.1.0", features = ["lb"] }
pingora-http = "0.1.0"
pingora-load-balancing = "0.1.0"
pingora-proxy = "0.1.0"
structopt = "0.3.26"
